--- a/index.html
+++ b/index.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Clon Google</title>
 </head>
+
 <body>
   <header>
     <nav>
       <ul class="menu">
         <li><a href="#">Gmail</a></li>
         <li><a href="#">Imagenes</a></li>
-        <li><img  class="icono-menu-cuadros" src="./img/icons/menu.png " alt="Icono de menu desplegable"></li>
+        <li><a>
+            <img class="icono icono-menu" src="./img/icons/menu.png " alt="Icono de menu desplegable">
+          </a></li>
         <li><a href="#"> I </a></li>
       </ul>
     </nav>
   </header>
 
   <main class="container">
-    <section >
-    <figure class="img-perfil">
-        <img src="" alt="Foto de perfil del usuario">
-    </figure>
+    <section class="content">
+
+      <figure class="img-logo">
+        <img src="" alt="Imagen del logo del">
+      </figure>
 
       <form action="#">
 
         <label for="buscador">
+          <div class="input-buscador">
 
-          <figure class="icono icono-buscador">
-            <img src="" alt="">
-          </figure>
-          <input type="text">
-          <figure class="icono icono-microfono">
-            <img src="" alt="">
-          </figure>
+            <figure class="icono icono-lupa">
+              <img src="./img/icons/lupa.png" alt="icono de lupa">
+            </figure>
+
+            <input type="text" placeholder="Escribe tu busqueda" name="buscador" class="input">
+
+            <figure class="icono icono-microfono">
+              <a href="#">  <img src="./img/icons/microfono.png" alt="icono de microfono" title="Buqueda por voz"></a>
+             
+            </figure>
+
+          </div>
+
         </label>
 
       </form>
 
-      <div>
+      <div class="links-tipo-de-busqueda">
         <a class="btn" href="#">Buscar Google</a>
         <a class="btn" href="#">Voy a tener suerte</a>
       </div>
-    
+
     </section>
   </main>
 
   <footer>
-    <section>
-      <ul class="menu-izq-footer">
+    <section class="footer-section-der">
+      <ul >
         <li><a href="#">Publicidad</a></li>
         <li><a href="#">Negocios</a></li>
         <li><a href="#">Acerca de </a></li>
@@ -60,14 +72,15 @@
       </ul>
     </section>
 
-    <section>
-      <ul class="menu-der-footer">
+    <section class="footer-section-izq">
+      <ul>
         <li><a href="#">Privacidad</a></li>
         <li><a href="#">Condiciones</a></li>
         <li><a href="#">Prefenecias</a></li>
       </ul>
     </section>
   </footer>
-  
+
 </body>
+
 </html>
